--- a/src/Nager.TcpClient/Nager.TcpClient.csproj
+++ b/src/Nager.TcpClient/Nager.TcpClient.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <Authors>Tino Hager</Authors>
@@ -19,7 +19,7 @@
     
     <RepositoryUrl>https://github.com/nager/Nager.TcpClient</RepositoryUrl>
 	  
-    <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;netstandard2.1;net5;net6</TargetFrameworks>
 
     <Version>1.0.0</Version>
   </PropertyGroup>
