--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -35,8 +35,8 @@ jobs:
     - name: Build project and generate NuGet package
       run: |
         dotnet pack --configuration Release --output $GITHUB_WORKSPACE/out src/Nager.TcpClient/Nager.TcpClient.csproj
-#    - name: Push NuGet package
-#      if: github.event_name != 'pull_request'
-#      run: |
-#        cd $GITHUB_WORKSPACE/out
-#        dotnet nuget push *.nupkg --source https://www.nuget.org/api/v2/package --api-key ${{secrets.NUGET_TOKEN}} --skip-duplicate --no-symbols true
+    - name: Push NuGet package
+      if: github.event_name != 'pull_request'
+      run: |
+        cd $GITHUB_WORKSPACE/out
+        dotnet nuget push *.nupkg --source https://www.nuget.org/api/v2/package --api-key ${{secrets.NUGET_TOKEN}} --skip-duplicate --no-symbols true
