--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -41,6 +41,7 @@ jobs:
       run: |
         dotnet test --configuration Release --no-restore --no-build --verbosity normal
     - name: Build project and generate NuGet package
+      if: matrix.os == 'ubuntu-latest'
       run: |
         dotnet pack --configuration Release --output $GITHUB_WORKSPACE/out src/Nager.TcpClient/Nager.TcpClient.csproj
     - name: Push NuGet package
