--- a/src/Nager.TcpClient/Nager.TcpClient.csproj
+++ b/src/Nager.TcpClient/Nager.TcpClient.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Authors>Tino Hager</Authors>
     <Company>nager.at</Company>
-    <Description>A simple asynchronous TcpClient</Description>
+    <Description>A simple TcpClient with asynchronous connect logic. Received data packets are available via a DataReceived event. There are also events for Connected and Disconnected.</Description>
 
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -15,13 +15,13 @@
     <PackageIcon>icon.png</PackageIcon>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/nager/Nager.TcpClient</PackageProjectUrl>
-    <PackageTags>TcpClient</PackageTags>
+    <PackageTags>tcpclient tcp keepalive cross-platform</PackageTags>
     
     <RepositoryUrl>https://github.com/nager/Nager.TcpClient</RepositoryUrl>
 	  
     <TargetFrameworks>netstandard2.0;netstandard2.1;net5;net6</TargetFrameworks>
 
-    <Version>1.0.13</Version>
+    <Version>1.0.14</Version>
   </PropertyGroup>
 
   <ItemGroup>
@@ -29,6 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="..\..\doc\README.md" Pack="true" PackagePath="\" />
     <None Include="..\..\doc\icon.png" Pack="true" PackagePath="" Visible="false" />
   </ItemGroup>
 	
