--- a/src/Nager.TcpClient/Nager.TcpClient.csproj
+++ b/src/Nager.TcpClient/Nager.TcpClient.csproj
@@ -14,6 +14,7 @@
 	  
     <PackageIcon>icon.png</PackageIcon>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageProjectUrl>https://github.com/nager/Nager.TcpClient</PackageProjectUrl>
     <PackageTags>tcpclient tcp keepalive cross-platform</PackageTags>
     
@@ -21,7 +22,7 @@
 	  
     <TargetFrameworks>netstandard2.0;netstandard2.1;net5;net6</TargetFrameworks>
 
-    <Version>1.0.14</Version>
+    <Version>1.0.15</Version>
   </PropertyGroup>
 
   <ItemGroup>
