--- a/src/Nager.TcpClient/Nager.TcpClient.csproj
+++ b/src/Nager.TcpClient/Nager.TcpClient.csproj
@@ -20,7 +20,7 @@
     
     <RepositoryUrl>https://github.com/nager/Nager.TcpClient</RepositoryUrl>
 	  
-    <TargetFrameworks>netstandard2.0;netstandard2.1;net5;net6</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;netstandard2.1;net6</TargetFrameworks>
 
     <Version>1.0.15</Version>
   </PropertyGroup>
