--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -16,6 +16,9 @@ jobs:
 
     runs-on: ${{ matrix.os }}
 
+    permissions:
+      checks: write
+
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
