--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -11,11 +11,11 @@ on:
     - 'src/**'
     branches: [ main ]
 
-permissions:
-  statuses: write
-  checks: write
-  contents: write
-  pull-requests: write
+#permissions:
+#  statuses: write
+#  checks: write
+#  contents: write
+#  pull-requests: write
 
 jobs:
   build:
