Fix issue when sending messages after the Connected event. (#1)
* Prepare stream before triggering the Connected event.

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -11,13 +11,16 @@ on:
     - 'src/**'
     branches: [ main ]
 
+#permissions:
+#  statuses: write
+#  checks: write
+#  contents: write
+#  pull-requests: write
+
 jobs:
   build:
 
     runs-on: ${{ matrix.os }}
-
-    permissions:
-      checks: write
 
     strategy:
       matrix:
