--- a/src/Nager.TcpClient/Nager.TcpClient.csproj
+++ b/src/Nager.TcpClient/Nager.TcpClient.csproj
@@ -20,13 +20,13 @@
     
     <RepositoryUrl>https://github.com/nager/Nager.TcpClient</RepositoryUrl>
 	  
-    <TargetFrameworks>netstandard2.0;netstandard2.1;net6</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;netstandard2.1;net6;net8</TargetFrameworks>
 
     <Version>1.1.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
   </ItemGroup>
 
   <ItemGroup>
