--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,7 @@ updates:
     schedule:
       interval: weekly
 
-  - package-ecosystem: NuGet
+  - package-ecosystem: nuget
     directory: /
     schedule:
       interval: weekly
