--- a/src/Nager.TcpClient.UnitTest/Nager.TcpClient.UnitTest.csproj
+++ b/src/Nager.TcpClient.UnitTest/Nager.TcpClient.UnitTest.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net6.0;net8.0;netcoreapp3.1</TargetFrameworks>
+    <TargetFrameworks>net6;net8</TargetFrameworks>
     <Nullable>enable</Nullable>
 
     <IsPackable>false</IsPackable>
